[package]
name = "test-idle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
jk_ban = { git = "https://github.com/JanSnoh/jk_ban", version = "0.1.0" }

[build-dependencies]
winres = "0.1.12"
